--- a/NAF.Api/appsettings.Development.json
+++ b/NAF.Api/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "NAF": "local"
+  },
+  "AppSettings": {
+    "JWT": {
+      "Key": "ASDHJGG123T123ASD6T7123BJFGSDAF86674671212ASD2MNASDVJANBHJF"
+    }
   }
 }
