--- a/NAF.Domain/NAF.Domain.csproj
+++ b/NAF.Domain/NAF.Domain.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.24" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.24" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
