--- a/NAF.Api/appsettings.Development.json
+++ b/NAF.Api/appsettings.Development.json
@@ -10,6 +10,8 @@
   },
   "AppSettings": {
     "JWT": {
+      "Issuer": "Naf-Api-Stg",
+      "Audience": "Naf-Portal-Stg",
       "Key": "ASDHJGG123T123ASD6T7123BJFGSDAF86674671212ASD2MNASDVJANBHJF"
     }
   }
