Adjusting nullables, pk and fk

--- a/NAF.Api/appsettings.Development.json
+++ b/NAF.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "NAF": "local"
+    "NAF": "Data Source=127.0.0.1;Initial Catalog=naf-db;Persist Security Info=True;User ID=root;Password=!MyStrongPassword;AllowUserVariables=True;Application Name=naf-api"
   },
   "AppSettings": {
     "JWT": {
