--- a/NAF.Infra.Data/NAF.Infra.Data.csproj
+++ b/NAF.Infra.Data/NAF.Infra.Data.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\NAF.Domain\NAF.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
