--- a/NAF.Api/appsettings.Development.json
+++ b/NAF.Api/appsettings.Development.json
@@ -2,17 +2,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
     "NAF": "Data Source=127.0.0.1;Initial Catalog=naf-db;Persist Security Info=True;User ID=root;Password=!MyStrongPassword;AllowUserVariables=True;Application Name=naf-api"
   },
   "AppSettings": {
+    "WebUrl": "http://localhost:3000",
     "JWT": {
       "Issuer": "Naf-Api-Stg",
       "Audience": "Naf-Portal-Stg",
       "Key": "ASDHJGG123T123ASD6T7123BJFGSDAF86674671212ASD2MNASDVJANBHJF"
+    },
+    "Gmail": {
+      "AccessKeyId": "",
+      "SecretAccessKey": ""
     }
   }
 }
