--- a/NAF.Domain/NAF.Domain.csproj
+++ b/NAF.Domain/NAF.Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.24" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.24" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
